# yarrow-lang

./: README.md  ReadMe  yarrow.cabal
doc/: ReadMe  changesV1.20.html  inBin.html  inHas.html  index.html  insta.html  liter.html  relea.html  userg.html
doc/sessions/: first.html  index.html  tutor.ps  tutor.tex
helpdir/: ReadMe  abort  about  ande  andel  ander  andi  apply  assumpti  backgrou  bdred  binder  bred  check  clear  context  convert  cut  deductio  def  dred  else  exact  existse  existsi  exit  extensio  falsee  first  focus  forward  help  hide  history  implicit  infix  infix-no  infixl  infixr  intro  (+46 more)
sessions/: ReadMe  naming  scripts
sessions/Uminus/: ReadMe  Uminus.ys
sessions/cube/: ReadMe  arrow.ys  lambda2.ys  lambdaC.ys  lambdaO.ys  lambdaP.ys  lambdaQ.ys  lambdaR.ys  lambdaw.ys
sessions/datatyp/: ReadMe  bool.yc  bool.ys  list.yc  list.ys  nat.yc  nat.ys  plus.yc  plus.ys
sessions/demos/: ReadMe  infix.ys  rewrite.ys
sessions/example/: exam.ys
sessions/logic/: ReadMe  classic.yc  classic.ys  functio.yc  functio.ys  is.yc  is.ys  lambdaL.ys  pred.yc  pred.ys  prop.yc  test  (+1 more)
src/: Basic.hs  CLIMain.hs  Collect.hs  Command.hs  Deduct.hs  Display.hs  Engine.hs  Errors.hs  FancyTy.hs  GenComs.hs  General.hs  GoMonIO.hs  GoMonSt.hs  GoTuple.hs  GoYarrow  HText.hs  HaMonIO.hs  HaMonSt.hs  HaTuple.hs  LatexPr.hs  MainMod.hs  MainPar.hs  MainPri.hs  MainSta.hs  Matchin.hs  Modules.hs  PTSys.hs  Parser.hs  Paths.hs  Platfor.hs  Printer.hs  ProvDat.hs  ProvMod.hs  ProvPar.hs  ProvPri.hs  ReadMe  Reduce.hs  Scanner.hs  Service.hs  SyntaxI.hs  (+8 more)
(+113 files in other folders)
